# ri-tp1

./: .gitignore  README.md
code/: README.md
code/src/: main.cpp
tp/: CMakeLists.txt
tp/RICP/src/: CMakeLists.txt  Makefile
tp/files/: .gitignore
tp/files/stats/: 128_1  128_2  256_1
tp/htmlcxx/: CMakeLists.txt  Node.cc  Uri.cc
tp/ricp/src/: CMakeLists.txt  CollectionReader.cpp
tp/src/: CMakeLists.txt  Configs.h  Indexer.cpp  ParserDoc.cpp  ParserDoc.h  Searcher.cpp  indexer.cpp  utf8.h
tp/src/index/: Configs.h  NormSample.cpp  ParserDoc.cpp  ParserDoc.h  ParserUtil.cpp  ParserUtil.h  RunUtil.cpp  RunUtil.h  StringManager.cpp  StringUtil.cpp  StringUtil.h  Triple.h
tp/src/search/: SearchUtil.cpp  SearchUtil.h
tp/test/: CMakeLists.txt  testReader.cpp  testWriter.cpp
