INCLUDE_DIRECTORIES(${TP_SOURCE_DIR}/RICP/src)
INCLUDE_DIRECTORIES(${TP_SOURCE_DIR}/htmlcxx)
LINK_DIRECTORIES(/usr/local/lib)

SET(CMAKE_MODULE_PATH ${TP_SOURCE_DIR})
FIND_PACKAGE(ICU COMPONENTS i18n io uc REQUIRED)

INCLUDE_DIRECTORIES(${ICU_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(index INDEX)

ADD_LIBRARY(TP ${INDEX})

ADD_EXECUTABLE(run Indexer.cpp)
# TARGET_LINK_LIBRARIES(run TP gumbo RICP z icudata icui18n icuio icule iculx icutu icuuc)
# TARGET_LINK_LIBRARIES(run TP gumbo RICP z icui18n icuio icuuc)
TARGET_LINK_LIBRARIES(run TP gumbo ${ICU_LIBRARIES} htmlcxx RICP z)