INCLUDE_DIRECTORIES(${TP_SOURCE_DIR}/ricp/src)
LINK_DIRECTORIES(/usr/local/lib)

SET(CMAKE_MODULE_PATH ${TP_SOURCE_DIR})
FIND_PACKAGE(ICU COMPONENTS i18n io uc REQUIRED)

INCLUDE_DIRECTORIES(${ICU_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(index INDEX)
AUX_SOURCE_DIRECTORY(search SEARCH)
ADD_LIBRARY(TP ${INDEX} ${SEARCH})

ADD_EXECUTABLE(run Indexer.cpp)
TARGET_LINK_LIBRARIES(run TP gumbo ${ICU_LIBRARIES} ricp z)